--- a/template/home/home.html
+++ b/template/home/home.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="template/home/home.css">
 <div ng-controller="HomeCtrl">
     这个是home 页面
     <button><a ui-sref="about">跳转about</a></button>
